--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -46,4 +46,5 @@ jobs:
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"evaristocuesta_CloverAce" /o:"evaristocuesta" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet restore aspnet-core
           dotnet build --no-restore aspnet-core --configuration Release
+          dotnet test --no-build --verbosity normal aspnet-core --configuration Release
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
