--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -44,7 +44,7 @@ jobs:
         shell: powershell
         run: |
           dotnet tool install --global dotnet-coverage
-          .\.sonar\scanner\dotnet-sonarscanner begin begin /k:"evaristocuesta_CloverAce" /o:"evaristocuesta" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml /d:sonar.host.url="https://sonarcloud.io"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"evaristocuesta_CloverAce" /o:"evaristocuesta" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml /d:sonar.host.url="https://sonarcloud.io"
           dotnet restore aspnet-core
           dotnet build --no-restore aspnet-core --configuration Release
           dotnet-coverage collect "dotnet test --no-build --verbosity normal aspnet-core --configuration Release" -f xml -o "coverage.xml"
