--- a/aspnet-core/src/CloverAce.DbMigrator/appsettings.json
+++ b/aspnet-core/src/CloverAce.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=CloverAce;User ID=root;Password=myPassword;"
+    "Default": "Host=localhost;Port=5432;Database=CloverAce;User ID=admin;Password=admin;"
   },
   "OpenIddict": {
     "Applications": {
