--- a/aspnet-core/src/CloverAce.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/CloverAce.HttpApi.Host/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=CloverAce;User ID=root;Password=myPassword;"
+    "Default": "Host=localhost;Port=5432;Database=CloverAce;User ID=admin;Password=admin;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44352",
