--- a/aspnet-core/src/CloverAce.Application.Contracts/CloverAce.Application.Contracts.csproj
+++ b/aspnet-core/src/CloverAce.Application.Contracts/CloverAce.Application.Contracts.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Volo.Abp.ObjectExtending" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="7.0.3" />
@@ -19,6 +20,10 @@
     <PackageReference Include="Volo.Abp.TenantManagement.Application.Contracts" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Application.Contracts" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Accounts\Queries\" />
   </ItemGroup>
 
 </Project>
