--- a/aspnet-core/src/CloverAce.Application/CloverAce.Application.csproj
+++ b/aspnet-core/src/CloverAce.Application/CloverAce.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.0.3" />
