--- a/aspnet-core/src/CloverAce.HttpApi/CloverAce.HttpApi.csproj
+++ b/aspnet-core/src/CloverAce.HttpApi/CloverAce.HttpApi.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Volo.Abp.Account.HttpApi" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="7.0.3" />
